--- a/src/templates/default/pc/tenant/template_table.html
+++ b/src/templates/default/pc/tenant/template_table.html
@@ -2,6 +2,7 @@
 	<th class="tcus str thcus">{{lang.CHATBOT_HEADER_QUETION|safe}}</th>
 	<th class="tcus str thcus">{{lang.CHATBOT_HEADER_POSITION|safe}}</th>
 	<th class="tcus str thcus">{{lang.CHATBOT_HEADER_REQUIRE|safe}}</th>
+	<th class="tcus str thcus">Input Type</th>
 	<th class="tcus str thcus">{{lang.CHATBOT_HEADER_OPTION|safe}}</th>
 	<th class="tcus str thcus">{{lang.CHATBOT_HEADER_DEAFULT|safe}}</th>
 	<th class="tcus str thcus" style="width: 110px;"></th>
@@ -20,7 +21,15 @@
 		</select>
 	</th>
 	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
+		<select class="input-type csselect" name="input_type[]">
+			<option value="1">テキスト型</option>
+			<option value="2">選択型</option>
+			<option value="3">数字型</option>
+			<option value="4">日付型</option>
+		</select>
+	</th>
+	<th class="tcus">
+		<input type="text" name="value[]" class="inputtextcs" disabled placeholder="30,40,50">
 	</th>
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="{{lang.CHATBOT_DEFAULT|safe}}">
@@ -43,7 +52,15 @@
 		</select>
 	</th>
 	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
+		<select class="input-type csselect" name="input_type[]">
+			<option value="1">テキスト型</option>
+			<option value="2">選択型</option>
+			<option value="3">数字型</option>
+			<option value="4">日付型</option>
+		</select>
+	</th>
+	<th class="tcus">
+		<input type="text" name="value[]" class="inputtextcs" disabled placeholder="30,40,50">
 	</th>
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="{{lang.CHATBOT_DEFAULT|safe}}">
@@ -66,7 +83,15 @@
 		</select>
 	</th>
 	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
+		<select class="input-type csselect" name="input_type[]">
+			<option value="1">テキスト型</option>
+			<option value="2">選択型</option>
+			<option value="3">数字型</option>
+			<option value="4">日付型</option>
+		</select>
+	</th>
+	<th class="tcus">
+		<input type="text" name="value[]" class="inputtextcs" disabled placeholder="30,40,50">
 	</th>
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="{{lang.CHATBOT_DEFAULT|safe}}">
@@ -89,7 +114,15 @@
 		</select>
 	</th>
 	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
+		<select class="input-type csselect" name="input_type[]">
+			<option value="1">テキスト型</option>
+			<option value="2">選択型</option>
+			<option value="3">数字型</option>
+			<option value="4">日付型</option>
+		</select>
+	</th>
+	<th class="tcus">
+		<input type="text" name="value[]" class="inputtextcs" disabled placeholder="30,40,50">
 	</th>
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="{{lang.CHATBOT_DEFAULT|safe}}">
@@ -112,7 +145,15 @@
 		</select>
 	</th>
 	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
+		<select class="input-type csselect" name="input_type[]">
+			<option value="1">テキスト型</option>
+			<option value="2">選択型</option>
+			<option value="3">数字型</option>
+			<option value="4">日付型</option>
+		</select>
+	</th>
+	<th class="tcus">
+		<input type="text" name="value[]" class="inputtextcs" disabled placeholder="30,40,50">
 	</th>
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="{{lang.CHATBOT_DEFAULT|safe}}">
