--- a/src/templates/default/pc/tenant/template_table_tr.html
+++ b/src/templates/default/pc/tenant/template_table_tr.html
@@ -12,6 +12,14 @@
 		</select>
 	</th>
 	<th class="tcus">
+		<select class="input-type csselect" name="input_type[]">
+			<option value="1">テキスト型</option>
+			<option value="2">選択型</option>
+			<option value="3">数字型</option>
+			<option value="4">日付型</option>
+		</select>
+	</th>
+	<th class="tcus">
 		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
 	</th>
 	<th class="tcus">
