--- a/src/templates/default/pc/tenant/template_index.html
+++ b/src/templates/default/pc/tenant/template_index.html
@@ -314,7 +314,7 @@
 <div class="innerArea01">
 <a name="SETUPTEMPLATE"></a>
 <span class="span_icon"><img src="/images/icons/setting_32.png"></span>
-<p class="ttl">{{lang.ADD_TEMPLATE}}</p>
+<p class="ttl">{{lang.LIST_TEMPLATE}}</p>
 <table class="detail_layout">
 	<tr>
 		<td>
